kubernetes/apps/immich/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  ports:
    - port: 2283
  selector:
    app: immich-server
