kubernetes/apps/immich/server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - immich.local.elmurphy.com
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
